# devcontainer-boilerplate-python-poetry-flask

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-construct.sh
src/app/: __init__.py
tests/: conftest.py  test___init__.py
